Fixed Safari horizontal scroll issues

--- a/staging/css/style.css
+++ b/staging/css/style.css
@@ -224,8 +224,20 @@ body{
 ********* Page styles ********
 *****************************/
 
+html{
+    overflow-x: hidden;
+}
+
 body{
     margin: 0px;
+    overflow-x: hidden;
+}
+
+#wrapper{
+    overflow-x: hidden;
+/*    position: fixed;*/
+/*    top: 0;*/
+/*    left: 0;*/
 }
 
 #contact{
@@ -238,9 +250,11 @@ body{
     z-index: 100;
 
 
+/*
     margin: 0 -9999rem;
-/*   add back negative margin value */
+   add back negative margin value
   padding: 0.25rem 9999rem;
+*/
     overflow-y: auto;
 }
 
@@ -441,12 +455,6 @@ a:hover{
     height: 100vh;
     width: 100vw;
     position: fixed;
-}
-
-
-
-body {
-    overflow-x: hidden;
 }
 
 #content {
